feat: new version

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": [
       "MIT"
     ],
+    "minimum-stability": "dev",
     "autoload": {
       "psr-4": {
         "Omnipro\\Base\\": ""
