feat: add minum stability

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": [
       "MIT"
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
       "psr-4": {
         "Omnipro\\Base\\": ""
